welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:2: error: not found: value int
  int l=nums.lenght
  ^arrayCount9:3: error: not found: value l
  if (l>4){
      ^arrayCount9:4: error: not found: value l
    l=4
    ^arrayCount9:6: error: not found: value l
  for (i <- 0 to l){
                 ^arrayCount9:7: error: not found: type i
    if(nums[i]==9){
            ^arrayCount9:7: error: value nums of type Array[Int] does not take type parameters.
    if(nums[i]==9){
           ^arrayCount9:8: error: type mismatch;
 found   : Boolean(true)
 required: Int
      return true
             ^arrayCount9:10: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^